# yapp

./: CITATION.cff  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTES_AT_FUTURE_ME.md  NOTICE  README.md  Taskfile.yml
.github/workflows/: build-linux.yml  build-macos-arm64.yml  build-macos.yml  build-windows.yml
src/: config.rs  main.rs  replacement.rs
src/tests/: config.rs  mod.rs  replacement.rs
