[package]
name = "mdbook-yapp"
version = "1.2.1"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "A mdBook preprocessor for simple text replacements"
documentation = "https://docs.rs/mdbook-yapp"
repository = "https://github.com/EngosSoftware/yapp.git"
keywords = ["mdbook", "preprocessor", "replace", "text", "pattern"]
categories = ["template-engine", "text-processing"]
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = [
    "rustfmt.toml",
    "Taskfile.yml",
    ".github/",
    ".gitignore"
]

[dependencies]
clap = "4.5.38"
kivi = "1.1.2"
mdbook = "0.4.49"
semver = "1.0.26"
serde_json = "1.0.140"
