[package]
name = "mdbook-yapp"
version = "1.2.4"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "mdBook preprocessor for simple text replacements"
documentation = "https://docs.rs/mdbook-yapp"
repository = "https://github.com/EngosSoftware/yapp.git"
keywords = ["mdBook", "preprocessor", "replace", "text", "pattern"]
categories = ["template-engine", "text-processing"]
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = [
    "rustfmt.toml",
    "Taskfile.yml",
    ".github/",
    ".gitignore",
    "NOTES_AT_FUTURE_ME.md",
    "CODE_OF_CONDUCT.md",
    "CITATION.cff"
]

[dependencies]
clap = "4.5.47"
kivi = "1.2.2"
mdbook = "0.4.52"
semver = "1.0.26"
serde_json = "1.0.143"
